Major commit containing the Vendor API push.